[tool.poetry]
name = "portal_shared"
version = "1.1.2"
description = "semantic versioning"
authors = ["freelanceadm"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
version_source = 'tag'
build_command = false
