[tool.poetry]
name = "portal_shared"
version = "0.2.0"
description = "semantic versioning"
authors = ["freelanceadm"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
version_source = 'tag'
build_command = false
upload_to_pypi = false
